# umbrella-protocol

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLIC_ACCESS.md  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
crates/umbrella-backup/: Cargo.toml
crates/umbrella-backup/src/: error.rs  identity_adapters.rs  lib.rs
crates/umbrella-backup/tests/: attack_rotation_24words.rs  phd_attacks_v2_wrapping.rs  pq_threshold_wrap.rs  r5b_derand_compile_fail.rs  test_F_76.rs  v1_v2_mixed_corpus.rs
crates/umbrella-calls/: Cargo.toml
crates/umbrella-calls/src/: error.rs  level.rs  lib.rs  policy.rs
crates/umbrella-calls/tests/: test_F_56.rs
crates/umbrella-client/: Cargo.toml  build.rs
crates/umbrella-client/examples/: r12_ratchet_lldb_target.rs  r20_distributed_identity_lldb_target.rs  r7_identity_lldb_target.rs
crates/umbrella-client/proto/: ws.proto
crates/umbrella-client/src/: core.rs  device_authorization.rs  error.rs  identity.rs  kt_monitor.rs  lib.rs  lifecycle.rs
crates/umbrella-client/tests/: attack_r21_duress_pin_deletes_account.rs  attack_r22_time_lock_recovery.rs  attack_r23_5_registry_detects_fake_version.rs  attack_r25_system_services_disabled.rs  attack_r26_dos_fallback_channels.rs  attack_r27_speed_local_operations.rs  attestation_mock.rs  call_no_p2p.rs  decision_logic_r23_5_registry_acceptance_gate.rs  facade_create_group_gateway.rs  facade_fetch_inbox_gateway.rs  facade_integration.rs  facade_max_ratchet_v3.rs  facade_pq_dispatch_pq_bootstrap.rs  facade_send_text_gateway.rs  facade_session10a_turn_allocation_wire_up.rs  facade_session10b_dtls_srtp_facade_api.rs  facade_session10c_state_machine_transitions.rs  facade_session10d_sframe_facade_api.rs  facade_session10e_srtp_encrypt_decrypt.rs  facade_session10f_initiate_device_transfer.rs  facade_session6_postman.rs  facade_session6c_at_rest_send.rs  facade_session7_sealed_sender.rs  facade_session8a_kt_self_monitor.rs  facade_session8b_kt_witness_threshold.rs  facade_session8c2_kt_monitor_combined.rs  facade_session8c3_kt_http2_witness_decode.rs  facade_session9b_identity_rotation_publish.rs  facade_session9c_device_authorization_publish.rs  facade_session9d_identity_rotation_full.rs  facade_session9e_hw_identity_state_swap.rs  facade_session9f_keystore_slot_swap.rs  keystore_sqlite.rs  max_ratchet_envelope_proptest.rs  r5_hw_callback_wiring.rs  test_F_57.rs  test_call_session_concurrent.rs  transport_gateway_fallback.rs  transport_http2.rs  (+2 more)
crates/umbrella-core/: Cargo.toml
crates/umbrella-core/src/: error.rs  ids.rs  lib.rs
crates/umbrella-crypto-primitives/: Cargo.toml
crates/umbrella-crypto-primitives/src/: aead.rs  dh.rs  error.rs  hash.rs  kdf.rs  lib.rs  mlocked.rs  secret.rs  sig.rs
crates/umbrella-crypto-primitives/tests/: test_F_39.rs  test_F_44.rs  test_active_audit.rs
crates/umbrella-discovery/: Cargo.toml
crates/umbrella-discovery/examples/: psi_realistic_scenario.rs
crates/umbrella-discovery/src/: anonymous_query.rs  error.rs  kt_bind.rs  lib.rs  psi.rs  rate_limit.rs  username_lookup.rs  wire.rs
crates/umbrella-discovery/tests/: attack_d1_plaintext_phone_leak.rs  attack_d2_query_correlation.rs  attack_d3_kt_bind_silent_swap.rs  attack_d4_cluster_collusion.rs  attack_d5_oprf_replay.rs  attack_d6_anon_id_reuse.rs  attack_d7_rate_limit_bypass.rs  attack_d8_cardinality_timing.rs  psi_correctness.rs
crates/umbrella-ffi/: Cargo.toml
crates/umbrella-ffi-kotlin/: Cargo.toml  build-aar.sh
crates/umbrella-ffi-kotlin/src/: lib.rs
crates/umbrella-ffi-kotlin/uniffi-bindgen/: main.rs
crates/umbrella-ffi-swift/: Cargo.toml  build-xcframework.sh
crates/umbrella-ffi-swift/src/: lib.rs
crates/umbrella-ffi-swift/uniffi-bindgen/: main.rs
crates/umbrella-ffi/src/: error.rs  lib.rs
crates/umbrella-ffi/tests/: error_conversions.rs  f_ffi2_production_session_handle.rs  production_bootstrap.rs  test_active_audit.rs  uniffi_smoke.rs
crates/umbrella-formal-verification/: Cargo.toml
crates/umbrella-formal-verification/models/: aggressive_dh_pcs.spthy  backup_wrap_v2.pv  discovery.spthy  downgrade_resistance.spthy  hybrid_signature_and_mode.spthy  kt_v1_self_monitoring.spthy  kt_v2_self_monitoring.spthy  mls_ed25519.spthy  multi_device_authorization.spthy  oprf_ristretto255.pv  sealed_sender_v1.pv  sealed_sender_v2.pv  sealed_servers_threshold_3of5.spthy  sealed_servers_threshold_universal.spthy  sframe_rfc9605.spthy  spqr_deniability.spthy  type_safe_enforcement.spthy  xwing_combiner.spthy
crates/umbrella-formal-verification/proofs/: aggressive_dh_pcs_proof.txt  spqr_deniability_proof.txt
crates/umbrella-formal-verification/src/: lib.rs  model_metadata.rs
crates/umbrella-formal-verification/tests/: model_consistency.rs
crates/umbrella-fuzz/: Cargo.toml
crates/umbrella-fuzz/fuzz/: Cargo.toml
crates/umbrella-fuzz/src/: lib.rs  targets.rs
crates/umbrella-identity/: Cargo.toml
crates/umbrella-identity/examples/: recovery_demo.rs
crates/umbrella-identity/src/: attestation.rs  cloud_wrap_recovery.rs  code_recovery.rs  derive.rs  device_key.rs  error.rs  hybrid_device_key.rs  hybrid_identity.rs  identity_key.rs  identity_x25519.rs  keystore.rs  lib.rs  path.rs  seed.rs  slh_dsa_backup.rs
crates/umbrella-identity/tests/: hybrid_identity_roundtrip.rs  slh_dsa_backup_recovery.rs  test_active_audit_phd.rs
crates/umbrella-kt/: Cargo.toml
crates/umbrella-kt/src/: authorization_entries.rs  codec.rs  entry.rs  entry_v2.rs  error.rs  lib.rs  merkle.rs  monitor.rs  observation.rs  version.rs  witness.rs  witness_state.rs
crates/umbrella-kt/tests/: phd_attacks.rs  (+4 more)
crates/umbrella-lints/: Cargo.toml  README.md
crates/umbrella-mls/: Cargo.toml
crates/umbrella-oprf/: Cargo.toml
crates/umbrella-padding/: Cargo.toml
crates/umbrella-platform-verifier/: Cargo.toml
crates/umbrella-pq/: Cargo.toml
crates/umbrella-sealed-sender/: Cargo.toml
crates/umbrella-server-blind-postman/: Cargo.toml
crates/umbrella-tests/: Cargo.toml
crates/umbrella-threshold-identity/: Cargo.toml
crates/umbrella-vectors/: CHECKSUMS.txt  Cargo.toml
(+479 files in other folders)
